fix: element visibility while scrolling (perspective 1px)

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,11 +12,15 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  scroll-behavior: smooth;
+}
+
+::selection {
+  background-color: $primary-color;
+  color: $font-color-light;
 }
 
 body {
@@ -37,6 +41,18 @@ h2 {
 a {
   color: unset;
   text-decoration: none;
+}
+
+[data-scroll-container] {
+  perspective: 1px;
+}
+
+.c-scrollbar_thumb {
+  background-color: $font-color-darker !important;
+  opacity: 0.3;
+  width: 7px;
+  border-radius: 10px;
+  margin: 2px;
 }
 
 @media screen and (max-width: 768px) {
